# everycam

./: .gitignore  CITATION.cff  CONTRIBUTING-DATA.md  CONTRIBUTING.md  PRIVACY.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  data-contribution.yml
.github/workflows/: ci.yml  data-contribution.yml  registry.yml
configs/: dashcam.yaml  webcam.yaml
docs/: CAMERAS.md  DATASET_CARD_TEMPLATE.md  EXPLAINER.md  index.html  manifest.webmanifest  record.html  service-worker.js
everycam/: __init__.py  cli.py  config.py  pipeline.py  types.py
everycam/benchmark/: __init__.py  devices.py  run.py
everycam/contrib/: __init__.py  aggregate.py  analyze.py  build.py  card.py  issue.py  validate.py
everycam/export/: __init__.py  lerobot.py  schema.py
everycam/models/: __init__.py  affordance.py  world.py
everycam/perception/: __init__.py  depth.py  egomotion.py  hands.py  objects.py
everycam/privacy/: __init__.py  anonymize.py
everycam/signals/: __init__.py  extract.py
everycam/sources/: __init__.py  base.py  synthetic.py  video.py
registry/: README.md  REPORT.md  datasets.jsonl  schema.json
registry/data/: .gitkeep
registry/data/example-synthetic/: provenance.json  signals.jsonl
scripts/: issue_to_card.py  run_demo.py  serve_website.sh  webcam_contribute.sh
tests/: conftest.py  test_benchmark.py  test_cli.py  test_contrib.py  test_export.py  test_models.py  test_perception.py  test_pipeline.py  test_privacy.py  test_signals.py  test_sources.py
